src/objects/echosign_dev1__SIGN_Recipients__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Echosign_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EchoSign Recipients</relationshipLabel>
        <relationshipName>Echosign_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Date_Time_Completed__c</fullName>
        <label>Date/Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Email_Address__c</fullName>
        <description>Applicable for the Recipient Type = Email</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Echosign_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__ParticipantId__c</fullName>
        <label>ParticipantId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__ParticipantSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParticipantSet</label>
        <referenceTo>echosign_dev1__ParticipantSet__c</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Participant_Set_Order_Number__c</fullName>
        <label>Participant Set Order Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Person_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Echosign_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Phone_Verification_Country_Code__c</fullName>
        <label>Phone Verification Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>212</fullName>
                </value>
                <value>
                    <fullName>213</fullName>
                </value>
                <value>
                    <fullName>216</fullName>
                </value>
                <value>
                    <fullName>221</fullName>
                </value>
                <value>
                    <fullName>225</fullName>
                </value>
                <value>
                    <fullName>230</fullName>
                </value>
                <value>
                    <fullName>231</fullName>
                </value>
                <value>
                    <fullName>233</fullName>
                </value>
                <value>
                    <fullName>234</fullName>
                </value>
                <value>
                    <fullName>254</fullName>
                </value>
                <value>
                    <fullName>255</fullName>
                </value>
                <value>
                    <fullName>260</fullName>
                </value>
                <value>
                    <fullName>262</fullName>
                </value>
                <value>
                    <fullName>263</fullName>
                </value>
                <value>
                    <fullName>264</fullName>
                </value>
                <value>
                    <fullName>265</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>297</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>351</fullName>
                </value>
                <value>
                    <fullName>352</fullName>
                </value>
                <value>
                    <fullName>353</fullName>
                </value>
                <value>
                    <fullName>354</fullName>
                </value>
                <value>
                    <fullName>357</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Phone_Verification_Phone_Number__c</fullName>
        <label>Phone Verification Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Message__c</fullName>
        <label>Recipient Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Role__c</fullName>
        <label>Recipient Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signer</fullName>
                    <default>true</default>
                    <label>Signer</label>
                </value>
                <value>
                    <fullName>Approver</fullName>
                </value>
                <value>
                    <fullName>Acceptor</fullName>
                </value>
                <value>
                    <fullName>Form Filler</fullName>
                </value>
                <value>
                    <fullName>Certified Recipient</fullName>
                </value>
                <value>
                    <fullName>Delegate to Signer</fullName>
                </value>
                <value>
                    <fullName>Delegate to Approver</fullName>
                </value>
                <value>
                    <fullName>Delegate to Acceptor</fullName>
                </value>
                <value>
                    <fullName>Delegate to Form Filler</fullName>
                </value>
                <value>
                    <fullName>Delegate to Certified Recipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Type__c</fullName>
        <description>Stores the Type of the Recipient</description>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Workflow_Label__c</fullName>
        <description>Recipient label defined in sign workflow</description>
        <inlineHelpText>Recipient label defined in sign workflow</inlineHelpText>
        <label>Recipient Workflow Label</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Replaced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replaced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signer_Verification_Method__c</fullName>
        <label>Signer Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Password</fullName>
                </value>
                <value>
                    <fullName>KBA</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Government ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Source_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Recipient</label>
        <referenceTo>echosign_dev1__SIGN_Recipients__c</referenceTo>
        <relationshipLabel>Alternate Recipients</relationshipLabel>
        <relationshipName>Alternate_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Delegated</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Form-Filled</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Waiting for Acceptance</fullName>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for Authoring</fullName>
                </value>
                <value>
                    <fullName>Waiting for Delegation</fullName>
                </value>
                <value>
                    <fullName>Waiting for Delivery</fullName>
                </value>
                <value>
                    <fullName>Waiting for Faxin</fullName>
                </value>
                <value>
                    <fullName>Waiting for Form-Filling</fullName>
                </value>
                <value>
                    <fullName>Waiting for Review</fullName>
                </value>
                <value>
                    <fullName>Waiting for Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Echosign_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__useEmailAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>useEmailAddress</label>
        <type>Checkbox</type>
    </fields>
    <label>Recipient</label>
    <nameField>
        <label>Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>